--- a/package.json
+++ b/package.json
@@ -2,15 +2,19 @@
   "name": "vtuber-watcher",
   "private": true,
   "dependencies": {
-    "@babel/preset-react": "^7.16.5",
+    "@babel/preset-react": "^7.16.7",
     "@rails/actioncable": "^6.0.0",
     "@rails/activestorage": "^6.0.0",
     "@rails/ujs": "^6.0.0",
     "@rails/webpacker": "5.4.3",
+    "@types/moment-duration-format": "^2.2.3",
     "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
-    "prop-types": "^15.7.2",
+    "moment-duration-format": "^2.3.2",
+    "prop-types": "^15.8.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-intl": "^5.24.3",
+    "react_ujs": "^2.6.1",
     "turbolinks": "^5.2.0",
     "webpack": "^4.46.0",
     "webpack-cli": "^3.3.12",
@@ -18,6 +22,7 @@
   },
   "version": "0.1.0",
   "devDependencies": {
+    "react-intl-formatted-duration": "^4.0.0",
     "webpack-dev-server": "^3"
   }
 }
